...
                case 2:
                  cubit.update(AppTab.finish);
              }
            },
            tabs: <Widget>[
              Tab(key: const Key('InitTab'), icon: Text(Localization.current.I18nHome_home)),
              Tab(key: const Key('StartTab'), icon: Text(Localization.current.I18nHome_start)),
              Tab(key: const Key('FinishTab'), icon: Text(Localization.current.I18nHome_finish)),
            ],
          ),
        ),
        body: MultiBlocListener(
          listeners: [
            // Следим за поступающей информацией от Bluetooth
...
